# tlaplus-autoposter

./: .gitignore  README.md  SPEC.md
autoposter/: README.md  config.yaml  pyproject.toml
autoposter/infra/: README.md  main.bicep  openai.bicep  pull-variables.sh
autoposter/prompts/: summarize.txt
autoposter/src/autoposter/: __init__.py  cli.py  config.py  models.py
autoposter/src/autoposter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
autoposter/src/autoposter/builder/: __init__.py  charts.py  metrics.py  renderer.py  validator.py
autoposter/src/autoposter/collectors/: __init__.py  github_collector.py  google_group.py  grants.py  metabase.py
autoposter/src/autoposter/publisher/: __init__.py  pr.py
autoposter/src/autoposter/summarizer/: __init__.py  llm.py
autoposter/templates/: post.md.j2
output/: 2026-03-dev-update.md  metrics_history.json
output/cache/: github.json  google_group.json  grants.json  metabase.json  summarized.json
